--- a/frontend/src/component/Admin/dashboard.css
+++ b/frontend/src/component/Admin/dashboard.css
@@ -43,20 +43,20 @@
   color: rgb(0, 0, 0);
   font: 300 2rem "Roboto";
   text-align: center;
-  background-color: rgb(255, 233, 174);
+  background-color: rgb(81, 108, 184);
   text-decoration: none;
   padding: 1.5rem;
   width: 10vmax;
   height: 10vmax;
   margin: 2rem;
-  border-radius: 100%;
+  /* border-radius: 100%; */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.dashboardSummaryBox2 > a:first-child {
+/* .dashboardSummaryBox2 > a:first-child {
   background-color: rgb(255, 110, 110);
   color: rgb(255, 255, 255);
 }
@@ -64,7 +64,7 @@
 .dashboardSummaryBox2 > a:last-child {
   background-color: rgb(51, 51, 51);
   color: rgb(255, 255, 255);
-}
+} */
 
 .lineChart {
   width: 80%;
